@startuml Paquete - Institución Educativa

' Configuración
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam groupInheritance 2
hide circle
skinparam shadowing false

title Paquete: Institución Educativa

' ============================================
' CLASES DEL PAQUETE
' ============================================

class Modalidad {
  +idModalidad: int
  +nombre: string
  --
  +crear(): Modalidad
  +actualizar(): void
  +eliminar(): void
  +obtenerPorId(id: int): Modalidad
  +listarTodos(): Modalidad[]
}

class Ie {
  +idIe: int
  +nombre: string
  +codigoIe: string
  +direccion: string
  +email: string
  +telefono: string
  +idModalidad: int
  +createdAt: DateTime
  +updatedAt: DateTime
  --
  +crear(): Ie
  +actualizar(): void
  +eliminar(): void
  +obtenerPorId(id: int): Ie
  +obtenerPorCodigo(codigo: string): Ie
  +listarTodos(): Ie[]
  +obtenerEstudiantes(): Estudiante[]
  +obtenerDocentes(): Docente[]
}

class Nivel {
  +idNivel: int
  +idIe: int
  +nombre: string
  --
  +crear(): Nivel
  +actualizar(): void
  +eliminar(): void
  +obtenerGrados(): Grado[]
}

class Grado {
  +idGrado: int
  +idNivel: int
  +nombre: string
  --
  +crear(): Grado
  +actualizar(): void
  +eliminar(): void
  +obtenerSecciones(): GradoSeccion[]
}

class Seccion {
  +idSeccion: int
  +nombre: string
  --
  +crear(): Seccion
  +actualizar(): void
  +eliminar(): void
  +listarTodos(): Seccion[]
}

class GradoSeccion {
  +idGradoSeccion: int
  +idGrado: int
  +idSeccion: int
  --
  +crear(): GradoSeccion
  +actualizar(): void
  +eliminar(): void
  +obtenerEstudiantes(): Estudiante[]
  +obtenerHorarios(): HorarioClase[]
  +asignarDocente(docente: Docente): void
}

class CalendarioEscolar {
  +idCalendario: int
  +idIe: int
  +fechaInicio: DateTime
  +fechaFin: DateTime
  +tipoDia: string
  +descripcion: string
  +creadoEn: DateTime
  --
  +crear(): CalendarioEscolar
  +actualizar(): void
  +eliminar(): void
  +esDiaHabil(fecha: DateTime): boolean
  +obtenerEventos(fechaInicio: DateTime, fechaFin: DateTime): CalendarioEscolar[]
}

' ============================================
' RELACIONES DEL PAQUETE
' ============================================

' Composición: IE contiene Niveles (si se elimina IE, se eliminan sus niveles)
Ie *-- Nivel
Ie *-- CalendarioEscolar

' Composición: Nivel contiene Grados
Nivel *-- Grado

' Agregación: GradoSeccion referencia Grado y Seccion (pueden existir independientemente)
Grado o-- GradoSeccion
Seccion o-- GradoSeccion

' Asociación: Modalidad clasifica IE
Modalidad -- Ie

note right of Ie
  **Institución Educativa**
  Clase central que representa
  la institución educativa y
  contiene toda su estructura
  organizacional.
end note

note left of GradoSeccion
  **GradoSeccion**
  Representa la combinación
  de un grado y una sección,
  formando un aula específica.
end note

@enduml
